fixed spacing for button

--- a/Website/resources/css/styles.css
+++ b/Website/resources/css/styles.css
@@ -124,7 +124,7 @@ a:hover {
 	border: 1px solid;
 	border-radius: 10px;
 	padding: 10px;
-	margin: 1% 0% 1% 1%;
+	margin: 3% 0% 1% 1%;
 	width: max-content;
 	font-weight: 600;
 	transition: 0.2s;
@@ -134,7 +134,7 @@ a:hover {
 	border: 1px solid;
 	border-radius: 10px;
 	padding: 10px;
-	margin: 1% 0% 1% 1%;
+	margin: 3% 0% 1% 1%;
 	width: max-content;
 	font-weight: 600;
 	background-color: #ffffff1a;
